force-app/main/default/objects/ProcessManagement__c/ProcessManagement__c.object-meta.xml
<CustomObject>
    <label>工程管理</label>
    <nameField>
        <displayFormat>PM-{000000000}</displayFormat>
        <label>工程管理ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>