force-app/main/default/objects/ProcessManagement__c/fields/ConfirmCompletedDate__c.field-meta.xml
<CustomField>
    <fullName>ConfirmCompletedDate__c</fullName>
    <label>確認完了日</label>
    <type>Date</type>
</CustomField>