force-app/main/default/objects/ProcessManagement__c/fields/ConfirmPerson__c.field-meta.xml
<CustomField>
    <fullName>ConfirmPerson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>確認者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProcessManagement2</relationshipName>
    <type>Lookup</type>
</CustomField>