force-app/main/default/objects/ProcessManagement__c/fields/CreatePerson__c.field-meta.xml
<CustomField>
    <fullName>CreatePerson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>作成者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProcessManagement</relationshipName>
    <type>Lookup</type>
</CustomField>