force-app/main/default/objects/ProcessManagement__c/fields/IsMailNecessity__c.field-meta.xml
<CustomField>
    <fullName>IsMailNecessity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>郵送要否フラグ</label>
    <type>Checkbox</type>
</CustomField>