force-app/main/default/objects/ProcessManagement__c/fields/IsOccurrence__c.field-meta.xml
<CustomField>
    <fullName>IsOccurrence__c</fullName>
    <label>発生有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>有</fullName>
            </value>
            <value>
                <fullName>無</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>