force-app/main/default/objects/ProcessManagement__c/fields/ProcessManagementMaster__c.field-meta.xml
<CustomField>
    <fullName>ProcessManagementMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>工程管理マスタ</label>
    <referenceTo>ProcessManagementMaster__c</referenceTo>
    <relationshipLabel>工程管理</relationshipLabel>
    <relationshipName>ProcessManagement</relationshipName>
    <type>Lookup</type>
</CustomField>