force-app/main/default/objects/ProcessManagement__c/fields/SendLetter__c.field-meta.xml
<CustomField>
    <fullName>SendLetter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>送付状</label>
    <referenceTo>SendLetter__c</referenceTo>
    <relationshipLabel>工程管理</relationshipLabel>
    <relationshipName>ProcessManagement</relationshipName>
    <type>Lookup</type>
</CustomField>