force-app/main/default/objects/ProcessManagement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未着手</fullName>
            </value>
            <value>
                <fullName>発生無</fullName>
            </value>
            <value>
                <fullName>管理外</fullName>
            </value>
            <value>
                <fullName>作成中</fullName>
            </value>
            <value>
                <fullName>作成済</fullName>
            </value>
            <value>
                <fullName>確認済</fullName>
            </value>
            <value>
                <fullName>データ連携済</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>