force-app/main/default/objects/ProcessManagement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>YearMonth__c</columns>
    <columns>ProcessManagementMaster__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>