force-app/main/default/objects/ProcessManagement__c/listViews/MonthDistinctionFieldsCorrectionList.listView-meta.xml
<ListView>
    <fullName>MonthDistinctionFieldsCorrectionList</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>DeliveryAddressMaster__c</columns>
    <columns>OperationCategory__c</columns>
    <columns>SendDueDate__c</columns>
    <columns>IssueDueDate__c</columns>
    <columns>CreateCompletedDate__c</columns>
    <columns>ConfirmCompletedDate__c</columns>
    <columns>IsOccurrence__c</columns>
    <columns>IsDataLinkDone__c</columns>
    <columns>SendLetter__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>YearMonth__c</field>
        <operation>equals</operation>
    </filters>
    <label>月別項目編集リスト</label>
</ListView>